Normal maps not working in quad meshes in Eevee #51561

Closed
opened 2017-05-19 16:12:20 +02:00 by Dalai Felinto · 12 comments

See file: shoe_packed.blend

In edit mode it works fine. But in object mode the shoe is black. If I triangulate the mesh it works fine.

See file: [shoe_packed.blend](https://archive.blender.org/developer/F603966/shoe_packed.blend) In edit mode it works fine. But in object mode the shoe is black. If I triangulate the mesh it works fine.
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Clément Foucault was assigned by Dalai Felinto 2017-05-19 16:12:32 +02:00
Author
Owner

(For the records, console shows: Error: Tangent space can only be computed for tris/quads, aborting)

(For the records, console shows: Error: Tangent space can only be computed for tris/quads, aborting)
Clément Foucault removed their assignment 2017-05-19 16:21:27 +02:00
Campbell Barton was assigned by Clément Foucault 2017-05-19 16:21:27 +02:00

Added subscriber: @fclem

Added subscriber: @fclem

This is caused by the use of BKE_editmesh_loop_tangent_calc in object mode.

This is caused by the use of BKE_editmesh_loop_tangent_calc in object mode.

BKE_editmesh_loop_tangent_calc isnt called in object mode. BKE_mesh_loop_tangents_ex is being called instead but it isn't used from Blender's own drawing code (only exposed via RNA).

Looking into generalizing DM_calc_loop_tangents which is more comprehensive.

`BKE_editmesh_loop_tangent_calc` isnt called in object mode. `BKE_mesh_loop_tangents_ex` is being called instead but it isn't used from Blender's own drawing code (only exposed via RNA). Looking into generalizing `DM_calc_loop_tangents` which is more comprehensive.

This issue was referenced by 429f6bee28

This issue was referenced by 429f6bee2845489a82983b54b6d63cc260a76387

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Owner

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
Author
Owner

Re-opening, some issues still present in the original file.

Re-opening, some issues still present in the original file.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Committed workaround, not sure why split normals cause this but since they're not used as normals, checked its not some array index mismatch so commenting for now - this matches edit-mesh.

Committed workaround, not sure why split normals cause this but since they're not used as normals, checked its not some array index mismatch so commenting for now - this matches edit-mesh.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51561
No description provided.