Fix T51561: Normal maps fail w/ quad + eevee

Generalize derived-mesh tangent calculation so
it can be used by Batch cache creation too.